--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,53 @@
 /* font */
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Lobster&family=Oswald:wght@200;300;400;500;600;700&family=Pacifico&family=Poppins:wght@300;500;600;700;800&family=Righteous&family=Source+Sans+Pro&family=Source+Serif+Pro:ital,wght@0,400;1,600&family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
-
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ Top-Bar @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+nav{
+    background: #562EFF;
+    margin-bottom: 0px;
+}
+.topbar{
+    width: 870px;
+    display: flex;
+    margin: 0 auto;
+    justify-content: space-between;
+    align-items: center;
+}
+.logo img{
+    width: 53px;
+    height: 54px;
+}
+#idea{
+    color: white;
+    padding-left: 20px;
+    font-weight: 400;
+    margin-top: 12px;
+}
+.logo{
+    display: flex;
+}
+.menu ul{
+    display: flex;
+}
+.menu ul li{
+    list-style: none;
+    padding: 20px 20px 0 20px;
+    
+}
+.menu ul li a{
+    text-decoration:none;
+    color: white;
+    font-size: 20px;
+    font-weight: 300;
+}
+.img-class{
+    margin-top: -12px;
+}
 /* common styles */
 body{
     font-family: 'Poppins', sans-serif;
     background-color: #f3f1ff;
+    margin: 0;
+    padding: 0;
 }
 main{
     display: flex;
@@ -53,6 +96,7 @@ hr{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-row-gap: 26px;
+    grid-column-gap: 80px;
 }
 .blog{
     display: flex;
@@ -81,6 +125,13 @@ hr{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-column-gap: 24px;
+    margin-bottom: 100px;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: space-between;
+}
+.course{
+    width: 247px;
 }
 .course .course-banner img{
     width: 224px;
@@ -90,6 +141,12 @@ hr{
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+.course-duration{
+    background: #ff8e9b;
+    border-radius: 25px;
+    padding: 5px;
+    color: #c02a3c;
 }
 .fa-star{
     font-size: 12px;
